change 'get single value' from POST to GET
