# docs/swagger.yaml
@@ -1,13 +1,5 @@
 basePath: /v1
 definitions:
-  dto.GetConcreteOptionRequest:
-    description: запрос конкретной настройки
-    properties:
-      optionPath:
-        type: string
-    required:
-    - optionPath
-    type: object
   dto.HttpError:
     properties:
       code:
@@ -84,7 +76,6 @@ paths:
       summary: Get all service settings
       tags:
       - settings
-  /settings/:
     post:
       consumes:
       - application/json
@@ -191,40 +182,6 @@ paths:
       summary: Update service settings
       tags:
       - settings
-    post:
-      consumes:
-      - application/json
-      description: Get service option as string by service name and  option path
-      parameters:
-      - description: Service name
-        in: path
-        name: serviceName
-        required: true
-        type: string
-      - description: Option path
-        in: body
-        name: path
-        required: true
-        schema:
-          $ref: '#/definitions/dto.GetConcreteOptionRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dto.HttpError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dto.HttpError'
-      summary: Get concrete service option
-      tags:
-      - settings
     put:
       description: Completely replace service settings by service name
       parameters:
@@ -251,6 +208,40 @@ paths:
           schema:
             $ref: '#/definitions/dto.HttpError'
       summary: Replace service settings
+      tags:
+      - settings
+  /settings/{serviceName}/{path}:
+    get:
+      consumes:
+      - application/json
+      description: Get service option as string by service name and  option path
+      parameters:
+      - description: Service name
+        in: path
+        name: serviceName
+        required: true
+        type: string
+      - description: Option path, comma-separated keys
+        in: path
+        name: path
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.HttpError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.HttpError'
+      summary: Get concrete service option
       tags:
       - settings
 swagger: "2.0"
