# dto/GetConcreteOptionRequest.go
@@ -1,6 +1,0 @@
-package dto
-
-// @description запрос конкретной настройки
-type GetConcreteOptionRequest struct {
-	OptionPath string `json:"optionPath" binding:"required"`
-}
